bk_ida/sjengida/g1/l_knight_mobility
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/l_knight_mobility/src/leval.c:530:21: error: use of undeclared identifier 'knight_o_1_0'
v1 = ( const char *)knight_o_1_0; 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/l_knight_mobility/src/obj/leval.o] Error 1
